# news-sentiment

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
samples/: sentiment_classfication_w_finbert.py  sentiment_classfication_w_llm.py  topic_classification.py
src/sentiment/: __init__.py  _base.py  hugging_face.py  llm.py
src/topic/: __init__.py  _base.py  llm.py
